# Orders_Master_SDD

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  GEMINI.md  README.md  TarefasV2.md  app.py  create_fixtures.py  divergencias.md  fix_fixtures.py  lista tarefas.md  prd.md  prdv2.md  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.md  todolist.md
orders_master_saas/: .env.example  Procfile  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
orders_master_saas/.github/workflows/: deploy.yml
orders_master_saas/accounts/: admin.py  models.py  urls.py  views.py
orders_master_saas/accounts/middleware/: __init__.py  tenant.py
orders_master_saas/accounts/migrations/: 0001_initial.py
orders_master_saas/accounts/tests/: test_models.py  test_subscription_middleware.py
orders_master_saas/backoffice/: admin.py
orders_master_saas/backoffice/tests/: test_import_commands.py
orders_master_saas/docs/: smoke_test_django.md
orders_master_saas/orders/: forms.py  models.py  urls.py  views.py
orders_master_saas/orders/migrations/: 0001_initial.py
orders_master_saas/orders/services/: __init__.py  license.py  processing_session.py
orders_master_saas/orders/templatetags/: table_tags.py
orders_master_saas/orders/tests/: conftest.py  test_config_models.py  test_django_cache.py  test_license_validation.py  test_multitenancy.py  test_processing_session.py  test_subscription_views.py
orders_master_saas/orders_master/: apps.py  logger.py  models.py  schemas.py  secrets_loader.py
orders_master_saas/orders_master/aggregation/: aggregator.py
orders_master_saas/orders_master/app_services/: recalc_service.py  session_service.py  session_state.py
orders_master_saas/orders_master/business_logic/: averages.py
orders_master_saas/orders_master_saas/: asgi.py  urls.py  wsgi.py
orders_master_saas/static/css/: app.css  orders.css
orders_master_saas/templates/: base.html
(+116 files in other folders)
