[project]
name = "orders-master-saas"
version = "0.1.0"
description = "Pharmacy orders management SaaS application"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "orders_master_saas.settings.development"
python_files = ["tests.py", "test_*.py", "*_tests.py"]